add statistiques + update profile