@@ -47,7 +47,7 @@ public class DocumentService {
         List<Document> allDocuments = documentRepository.findAll().stream()
                 .filter(document -> document.getTitre().toLowerCase().contains(search.toLowerCase())
                         || document.getDiscripteurs().stream().anyMatch(discripteur -> discripteur.getKeyword().toLowerCase().contains(search.toLowerCase())))
-                .collect(Collectors.toList());
+                .toList();
 
         // Calculate the start and end item indices for the desired page
         int start = Math.min((page * size), allDocuments.size());
@@ -69,5 +69,42 @@ public class DocumentService {
 
     public void deleteDocumentById(Long id){
         documentRepository.deleteById(id);
+    }
+
+    public Page<DocumentDto> getDocumentsByType(int page,int size, String search, String type) {
+        List<Document> allDocuments = documentRepository.findAll().stream()
+                .filter((document -> document.getTitre().toLowerCase().contains(search.toLowerCase())
+                        || document.getDiscripteurs().stream().anyMatch(discripteur -> discripteur.getKeyword().toLowerCase().contains(search.toLowerCase()))))
+                .toList();
+        //convert Document to Dtos
+        List<DocumentDto> documentDtos = allDocuments.stream().map(documentMapper::toDto).toList();
+
+        // Calculate the start and end item indices for the desired page
+        int start = Math.min((page * size), allDocuments.size());
+        int end = Math.min(start + size, allDocuments.size());
+        // Extract the specific page from the filtered list
+        List<DocumentDto> documentPage = documentDtos.subList(start, end).stream()
+                .filter(documentDto -> documentDto.getType().equalsIgnoreCase(type))
+                .collect(Collectors.toList());
+        // Return the page as a Page object
+        return new PageImpl<>(documentPage, PageRequest.of(page, size), allDocuments.size());
+    }
+    public Page<DocumentDto> getDocumentsByLangue(int page,int size, String search, String langue) {
+        List<Document> allDocuments = documentRepository.findAll().stream()
+                .filter((document -> document.getTitre().toLowerCase().contains(search.toLowerCase())
+                        || document.getDiscripteurs().stream().anyMatch(discripteur -> discripteur.getKeyword().toLowerCase().contains(search.toLowerCase()))))
+                .toList();
+
+        // Calculate the start and end item indices for the desired page
+        int start = Math.min((page * size), allDocuments.size());
+        int end = Math.min(start + size, allDocuments.size());
+
+        // Extract the specific page from the filtered list
+        List<DocumentDto> documentPage = allDocuments.subList(start, end).stream()
+                .map(documentMapper::toDto)
+                .collect(Collectors.toList());
+        documentPage = documentPage.stream().filter(documentDto -> documentDto.getLangue().equalsIgnoreCase(langue)).toList();
+        // Return the page as a Page object
+        return new PageImpl<>(documentPage, PageRequest.of(page, size), allDocuments.size());
     }
 }
